--- a/modules/shared/assets/css/main.css
+++ b/modules/shared/assets/css/main.css
@@ -159,8 +159,9 @@ input:focus,
 select:focus,
 textarea:focus,
 button:focus {
-  outline: none;
 }
+
+/* outline: none */
 
 [type='search']::-webkit-search-cancel-button {
   display: none;
